忽略 mac 下生成的文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-#windows
+# Windows
 Debug.win32
 Release.win32
 *.vcxproj.user
 *.opendb
 *.sdf
+.vs
+
+# OS X
+.DS_Store
+xcuserdata
+project.xcworkspace
