--- a/project.json
+++ b/project.json
@@ -12,7 +12,6 @@
   ],
   "jsList": [
     "src/resource.js",
-    "src/OpeningScene.js",
-    "src/UpdateScene.js"
+    "src/StartScene.js"
   ]
 }
